[gd_scene load_steps=17 format=3 uid="uid://dc5ch21ml1dpl"]

[ext_resource type="Script" path="res://Scripts/Home.gd" id="1_1unq7"]
[ext_resource type="Texture2D" uid="uid://3ooxr3q6m3iq" path="res://Graphics/backgroundTile.png" id="1_42gtg"]
[ext_resource type="PackedScene" uid="uid://43pd1826sss4" path="res://Scenes/GameCam.tscn" id="1_aghax"]
[ext_resource type="Texture2D" uid="uid://bfwh5x02hgii3" path="res://Graphics/jerumy home.png" id="1_pw6lq"]
[ext_resource type="PackedScene" uid="uid://dx3dhdfcswkq" path="res://Scenes/GoodGuys/player.tscn" id="3_g7sy7"]
[ext_resource type="PackedScene" uid="uid://domjeaeiybifl" path="res://Scenes/planet.tscn" id="3_oi4x4"]
[ext_resource type="Texture2D" uid="uid://ulbpqnu078e" path="res://Graphics/Ship.png" id="5_vpsyn"]
[ext_resource type="PackedScene" uid="uid://bv43ilgetnxsx" path="res://Scenes/scene_transition.tscn" id="9_87cil"]
[ext_resource type="PackedScene" uid="uid://ceqync4fovyct" path="res://Scenes/platform.tscn" id="9_xr5fp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pafy0"]
atlas = ExtResource("5_vpsyn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8idi"]
atlas = ExtResource("5_vpsyn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8de24"]
atlas = ExtResource("5_vpsyn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aca6n"]
atlas = ExtResource("5_vpsyn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sshg7"]
atlas = ExtResource("5_vpsyn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ap2y6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pafy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8idi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8de24")
}],
"loop": true,
"name": &"Broke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aca6n")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sshg7")
}],
"loop": true,
"name": &"Pilot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwo74"]
size = Vector2(59.4289, 45.8271)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LV1" type="Node2D" parent="."]
position = Vector2(-1, 0)
script = ExtResource("1_1unq7")

[node name="Space" type="TextureRect" parent="LV1"]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_42gtg")
stretch_mode = 1

[node name="Planet" parent="LV1" instance=ExtResource("3_oi4x4")]
position = Vector2(537, 761)
inertia = 39.81

[node name="Platform" parent="LV1/Planet" instance=ExtResource("9_xr5fp")]
position = Vector2(-112, -525)
rotation = -0.139626

[node name="JerumyHome" type="Sprite2D" parent="LV1/Planet"]
position = Vector2(2, -529)
texture = ExtResource("1_pw6lq")

[node name="Ship" type="AnimatedSprite2D" parent="LV1/Planet"]
position = Vector2(129, -515)
rotation = 0.23911
sprite_frames = SubResource("SpriteFrames_ap2y6")
animation = &"Empty"

[node name="Area2D" type="Area2D" parent="LV1/Planet/Ship"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LV1/Planet/Ship/Area2D"]
position = Vector2(0.0460205, 7.62978)
shape = SubResource("RectangleShape2D_mwo74")

[node name="Player" parent="LV1" node_paths=PackedStringArray("WORLD") instance=ExtResource("3_g7sy7")]
position = Vector2(537, 244)
MAX_SPEED = 0.005
GUNKED_SPEED = 0.003
ACCELERATION = 0.001
WORLD = NodePath("../Planet")

[node name="Camera2D" parent="LV1" node_paths=PackedStringArray("Player") instance=ExtResource("1_aghax")]
position = Vector2(584, 244)
Player = NodePath("../Player")

[node name="SceneTransition" parent="." instance=ExtResource("9_87cil")]
layout_mode = 1
offset_left = -1.0
offset_right = -1.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(1, 0)
update_position = false
update_rotation = false
update_scale = false

[connection signal="body_entered" from="LV1/Planet/Ship/Area2D" to="LV1" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="LV1/Planet/Ship/Area2D" to="LV1" method="_on_area_2d_body_exited"]
